--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
           <div class="ccard ccard-2">
             <img src="./images.png">
             <div class="subdiv">
-            <h3 class="jura-tex">Network Security Professional</h3>
-            <p>Accredited as a Fortinet Professional in Network Security (FCP), demonstrating expertise in secure network infrastructure.</p>
+            <h3 class="jura-tex">Salesforce Trailhead Achievements</h3>
+            <p>Completed Salesforce Administrator, Platform developer and JavaScript-LWC Trailmixes. Gained hands-on experience through Trailhead.</p>
             </div>
           </div>
           <div class="ccard ccard-3">
@@ -273,4 +273,5 @@
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
       <script src="index.js"></script>
     </body>
+
 </html>
