--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
         </div>
         <div class="info-item">
           <i class="fa-brands fa-salesforce"></i>
-          <a href="https://www.salesforce.com/trailblazer/sy4calh80juyrxt0h5" target="_blank"><button>Salesforce Trailhead</button></a>
+          <a href="https://www.salesforce.com/trailblazer/sy4calh80juyrxt0h5" target="_blank"><button>Trailhead</button></a>
         </div>
       </div>
     
@@ -279,4 +279,5 @@
     </body>
 
 </html>
+
 
